<resources>
    <string name="app_name">DIAMONDS NFC</string>
    <string name="catalog_text">КАТЕГОРИИ</string>
    <string name="backet_text">КОРЗИНА</string>
    <string name="favorite_text">ИЗБРАННОЕ</string>
    <string name="profile_text">ЛИЧНЫЙ КАБИНЕТ</string>
    <string name="profile_hello">Здравствуйте,</string>
    <string name="profile_username">Даниил Хомяков</string>
    <string name="profile_rename_contact_info">Изменить контактную информацию</string>
    <string name="profile_password">Пароль</string>
    <string name="profile_list_contact">Список контактов</string>
    <string name="profile_history_order">История заказов</string>
    <string name="profile_bonus">Бонусные баллы</string>
    <string name="profile_email_pushing">E-Mail рассылка</string>
    <string name="profile_logout">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="account_text">УЧЕТНАЯ ЗАПИСЬ</string>
    <string name="your_account_text">Ваша учетная запись</string>
    <string name="account_name_text">Имя пользователя</string>
    <string name="account_sname_text">Фамилия</string>
    <string name="account_email_text">Email</string>
    <string name="account_phone_text">Телефон</string>
    <string name="account_fax_text">Факс</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_text">СМЕНА ПАРОЛЯ</string>
    <string name="your_password_text">Ваш пароль</string>
    <string name="password_pass_text">Пароль</string>
    <string name="password_newpass_text">Подтвердите пароль</string>
    <string name="listAddress_text">АДРЕСА ДОСТАВКИ</string>
    <string name="historyOrder_text">ИСТОРИЯ ЗАКАЗОВ</string>
    <string name="Bonus_text">БОНУСНЫЕ БАЛЛЫ</string>
    <string name="auth_text">Авторизация</string>
    <string name="enter_info_entry">Введите свои данные для входа</string>
    <string name="forget_pass">Забыли пароль?</string>
    <string name="jewelry">Ювелирные изделия</string>
    <string name="new_items">• Новинки</string>
    <string name="rings">• Кольца</string>
    <string name="earrings">• Серьги</string>
    <string name="obesity_and_suspension">• Ожерелья и подвески</string>
    <string name="Bracelets">• Браслеты</string>
    <string name="recently_sold">• Недавно проданные</string>
    <string name="wedding_and_engagement">Свадьба и помолвка</string>
    <string name="solitaire_rings">• Кольца солитер</string>
    <string name="rings_halo">• Кольца-halo</string>
    <string name="rings_with_three_rings">• Кольца с тремя камнями</string>
    <string name="rings_with_side_stones">• Кольца с боковыми камнями</string>
    <string name="fancy_color_rings_of_eternity">• фантазийные цветные кольца вечности</string>
    <string name="diamond_rings_of_eternity">• бриллиантовые кольца вечности</string>
    <string name="wedding_rings">• свадебные кольца</string>
    <string name="wedding_rings_two">• обручальные кольца</string>
    <string name="mens_rings">• мужские кольца</string>
    <string name="diamonds">Бриллианты</string>
    <string name="stones">камни</string>
    <string name="reg_text">Регистрация</string>
    <string name="contact_data">Контактные данные</string>
    <string name="reg_name_text">Имя</string>
</resources>